--- a/Resume_Template.tex
+++ b/Resume_Template.tex
@@ -1,4 +1,4 @@
-% Cloning Sam Watson's resume
+% Cloning Sam Watson's resume (and others)
 % http://math.mit.edu/~sswatson/pdfs/samuelswatson.pdf
 
 \documentclass[11pt]{article}
